Make consistent use of Yes/No in dependencies report
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1645364 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_cs.properties
+++ b/src/main/resources/project-info-report_cs.properties
@@ -76,11 +76,11 @@ report.dependencies.intro.test                                     = Seznam z\u0
 report.dependencies.name                                           = Z\u00e1vislosti
 report.dependencies.nolist                                         = Projekt nem\u00e1 \u017e\u00e1dn\u00e9 z\u00e1vislosti. Jedn\u00e1 se o samostatnou aplikaci, kter\u00e1 nez\u00e1vis\u00ed na \u017e\u00e1dn\u00e9m jin\u00e9m projektu.
 report.dependencies.repo.locations.artifact.breakdown              = Um\u00edst\u011bn\u00ed v repozit\u00e1\u0159i pro ka\u017edou z\u00e1vislost.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Ne
 report.dependencies.repo.locations.cell.release.enabled            = Ano
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Ne
 report.dependencies.repo.locations.cell.snapshot.enabled           = Ano
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Ne
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Ano
 report.dependencies.repo.locations.column.artifact                 = Artefakt
 report.dependencies.repo.locations.column.blacklisted              = Zak\u00e1zan\u00fd
