--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -79,11 +79,11 @@ report.dependencies.intro.test                                     = Es folgt ei
 report.dependencies.name                                           = Abh\u00e4ngigkeiten
 report.dependencies.nolist                                         = F\u00fcr dieses Projekt existieren keine Abh\u00e4ngigkeiten. Es ist ein eigenst\u00e4ndiges Projekt ohne externe Abh\u00e4ngigkeiten.
 report.dependencies.repo.locations.artifact.breakdown              = Der Archiv-Ort f\u00fcr jede Abh\u00e4ngigkeit.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Nein
 report.dependencies.repo.locations.cell.release.enabled            = Ja
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Nein
 report.dependencies.repo.locations.cell.snapshot.enabled           = Ja
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Nein
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Ja
 report.dependencies.repo.locations.column.artifact                 = Artefakt
 report.dependencies.repo.locations.column.blacklisted              = Blacklisted
@@ -161,7 +161,7 @@ report.scm.accessbehindfirewall.svn.intro                          = Wenn der Zu
 report.scm.accessbehindfirewall.title                              = Zugriff durch eine Firewall
 report.scm.accessthroughtproxy.svn.intro1                          = Subversion kann einen Proxy verwenden, mu\u00df hierf\u00fcr allerdings entsprechend konfiguriert werden. Der zu verwendende Proxy wird in der "servers"-Konfigurationsdatei angegeben. Es h\u00e4ngt von Ihrem System ab, wo sich diese Datei befindet. Bei Linux oder Unix befindet sich die Datei im "~/.subversion"-Verzeichnis. Bei Windows in "%APPDATA%\\Subversion". (Versuchen Sie "echo %APPDATA%" - beachten Sie, da\u00df dies ein versteckter Ordner ist.)
 report.scm.accessthroughtproxy.svn.intro2                          = Diese Datei enth\u00e4lt einige Hinweise. Sollte diese Datei nicht existieren, f\u00fchren Sie einen beliebigen Befehl mit einer aktuellen Subversion-Version aus, um die Datei automatisch erstellen zu lassen.
-report.scm.accessthroughtproxy.svn.intro3                          = Beispiel:  "servers"-Datei editieren und Proxy hinzuf\u00fcgen:
+report.scm.accessthroughtproxy.svn.intro3                          = Beispiel: "servers"-Datei editieren und Proxy hinzuf\u00fcgen:
 report.scm.accessthroughtproxy.title                               = Zugriff \u00fcber einen Proxy
 report.scm.anonymousaccess.cvs.intro                               = Das CVS-Archiv dieses Projektes kann durch anonymen CVS Zugriff mit dem folgenden Befehl ausgecheckt werden. Wenn Sie nach einem Passwort gefragt werden bet\u00e4tigen Sie einfach die Enter Taste.
 report.scm.anonymousaccess.general.intro                           = Konsultieren Sie die Dokumentation des verwendeten Versionskontrollsystems f\u00fcr weitere Informationen \u00fcber anonymen Zugriff. Der Web-Link ist:
