--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -77,11 +77,11 @@ report.dependencies.intro.test                                     = Lista de de
 report.dependencies.name                                           = Dependencias
 report.dependencies.nolist                                         = Este proyecto no tiene dependencias. Es una aplicaci\u00f3n independiente que no depende de ning\u00fan otro proyecto.
 report.dependencies.repo.locations.artifact.breakdown              = Localizaci\u00f3n de cada dependencia en el repositorio.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = No
 report.dependencies.repo.locations.cell.release.enabled            = S\u00ed
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = No
 report.dependencies.repo.locations.cell.snapshot.enabled           = S\u00ed
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = No
 report.dependencies.repo.locations.cell.blacklisted.enabled        = S\u00ed
 report.dependencies.repo.locations.column.artifact                 = Artefacto
 report.dependencies.repo.locations.column.blacklisted              = En lista negra
