--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -77,11 +77,11 @@ report.dependencies.intro.test                                     = Ce qui suit
 report.dependencies.name                                           = D\u00e9pendances
 report.dependencies.nolist                                         = Il n'y a aucune d\u00e9pendance pour ce projet. C'est une application autonome qui ne d\u00e9pend d'aucun autre projet.
 report.dependencies.repo.locations.artifact.breakdown              = Localisation du r\u00e9f\u00e9rentiel pour chacune des d\u00e9pendances.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Non
 report.dependencies.repo.locations.cell.release.enabled            = Oui
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Non
 report.dependencies.repo.locations.cell.snapshot.enabled           = Oui
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Non
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Oui
 report.dependencies.repo.locations.column.artifact                 = Artefact
 report.dependencies.repo.locations.column.blacklisted              = Blacklist\u00e9
