--- a/src/main/resources/project-info-report_gl.properties
+++ b/src/main/resources/project-info-report_gl.properties
@@ -73,11 +73,11 @@ report.dependencies.intro.test                                     = Lista de de
 report.dependencies.name                                           = Dependencias
 report.dependencies.nolist                                         = Este proxecto non ten dependencias. \u00C9 unha aplicaci\u00f3n independente que non depende de ning\u00fan outro proxecto.
 report.dependencies.repo.locations.artifact.breakdown              = Localizaci\u00f3n de cada dependencia no repositorio.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Non
 report.dependencies.repo.locations.cell.release.enabled            = Si
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Non
 report.dependencies.repo.locations.cell.snapshot.enabled           = Si
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Non
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Si
 report.dependencies.repo.locations.column.artifact                 = Artefacto
 report.dependencies.repo.locations.column.blacklisted              = En lista negra
