--- a/src/main/resources/project-info-report_lt.properties
+++ b/src/main/resources/project-info-report_lt.properties
@@ -73,11 +73,11 @@ report.dependencies.intro.test                                     = \u017demiau
 report.dependencies.name                                           = Reikalingi projektai
 report.dependencies.nolist                                         = \u0160is projektas nereikalauja papildom\u0173 bibliotek\u0173.
 report.dependencies.repo.locations.artifact.breakdown              = Saugykl\u0173 vietos kiekvienai priklausomybei.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Ne
 report.dependencies.repo.locations.cell.release.enabled            = Taip
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Ne
 report.dependencies.repo.locations.cell.snapshot.enabled           = Taip
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Ne
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Taip
 report.dependencies.repo.locations.column.artifact                 = Artefaktas
 report.dependencies.repo.locations.column.blacklisted              = Blacklisted
