--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -74,11 +74,11 @@ report.dependencies.intro.test                                     = Esta \u00e9
 report.dependencies.name                                           = Depend\u00eancias
 report.dependencies.nolist                                         = Este projeto n\u00e3o tem depend\u00eancias. \u00c9 uma aplica\u00e7\u00e3o independente (standalone) que n\u00e3o requer nenhum outro projeto.
 report.dependencies.repo.locations.artifact.breakdown              = Localiza\u00e7\u00e3o do reposit\u00f3rio para cada uma das depend\u00eancias.
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = N\u00e3o
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Sim
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = N\u00e3o
 report.dependencies.repo.locations.cell.release.enabled            = Sim
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = N\u00e3o
 report.dependencies.repo.locations.cell.snapshot.enabled           = Sim
 report.dependencies.repo.locations.column.artifact                 = Artefato
 report.dependencies.repo.locations.column.blacklisted              = Na lista negra
