--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -74,11 +74,11 @@ report.dependencies.intro.test                                     = F\u00f6ljan
 report.dependencies.name                                           = Beroenden
 report.dependencies.nolist                                         = Det finns inga beroenden f\u00f6r detta projekt. Det \u00e4r en frist\u00e5ende applikation som inte \u00e4r beroende av n\u00e5got annat projekt.
 report.dependencies.repo.locations.artifact.breakdown              = F\u00f6rvaringsplats f\u00f6r varje beroende.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = Nej
 report.dependencies.repo.locations.cell.release.enabled            = Ja
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = Nej
 report.dependencies.repo.locations.cell.snapshot.enabled           = Ja
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = Nej
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Ja
 report.dependencies.repo.locations.column.artifact                 = Artifact
 report.dependencies.repo.locations.column.blacklisted              = Svartlistad
