--- a/src/main/resources/project-info-report_tr.properties
+++ b/src/main/resources/project-info-report_tr.properties
@@ -67,10 +67,8 @@ report.dependencies.intro.test                                     = The followi
 report.dependencies.name                                           = Dependencies
 report.dependencies.nolist                                         = There are no dependencies for this project. It is a standalone application that does not depend on any other project.
 report.dependencies.repo.locations.artifact.breakdown              = Repository locations for each of the Dependencies.
-report.dependencies.repo.locations.cell.release.disabled           = -
-report.dependencies.repo.locations.cell.release.enabled            = Yes
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
-report.dependencies.repo.locations.cell.snapshot.enabled           = Yes
+report.dependencies.repo.locations.cell.release.enabled            = Evet
+report.dependencies.repo.locations.cell.snapshot.enabled           = Evet
 report.dependencies.repo.locations.column.artifact                 = Artifact
 report.dependencies.repo.locations.column.release                  = Release
 report.dependencies.repo.locations.column.repoid                   = Repo ID
