--- a/src/main/resources/project-info-report_zh_TW.properties
+++ b/src/main/resources/project-info-report_zh_TW.properties
@@ -73,11 +73,11 @@ report.dependencies.intro.test                                     = \u4e0b\u521
 report.dependencies.name                                           = \u4f9d\u8cf4 (Dependencies)
 report.dependencies.nolist                                         = \u672c\u5c08\u6848\u6c92\u6709\u4efb\u4f55\u4f9d\u8cf4\u3002\u662f\u4e00\u500b\u4e0d\u4f9d\u9760\u5176\u5b83\u5c08\u6848\u7684\u7368\u7acb\u61c9\u7528\u7a0b\u5f0f
 report.dependencies.repo.locations.artifact.breakdown              = \u6bcf\u500b\u4f9d\u8cf4\u7684\u8caf\u85cf\u5eab\u4f4d\u7f6e\u3002
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = \u5426
 report.dependencies.repo.locations.cell.release.enabled            = \u662f
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = \u5426
 report.dependencies.repo.locations.cell.snapshot.enabled           = \u662f
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = \u5426
 report.dependencies.repo.locations.cell.blacklisted.enabled        = \u662f
 report.dependencies.repo.locations.column.artifact                 = Artifact
 report.dependencies.repo.locations.column.blacklisted              = Blacklisted
