--- a/src/main/resources/project-info-report_ru.properties
+++ b/src/main/resources/project-info-report_ru.properties
@@ -75,11 +75,11 @@ report.dependencies.intro.test                                     = \u0417\u043
 report.dependencies.name                                           = \u0417\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0438
 report.dependencies.nolist                                         = \u0423 \u044d\u0442\u043e\u0433\u043e \u043f\u0440\u043e\u0435\u043a\u0442\u0430 \u043d\u0435\u0442 \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0435\u0439, \u044d\u0442\u043e \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430 \u043d\u0435 \u0437\u0430\u0432\u0438\u0441\u044f\u0449\u0430\u044f \u043d\u0438 \u043e\u0442 \u043a\u0430\u043a\u0438\u0445 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a.
 report.dependencies.repo.locations.artifact.breakdown              = \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u043a\u0430\u0436\u0434\u043e\u0439 \u0437\u0430\u0432\u0438\u0441\u0438\u043c\u043e\u0441\u0442\u0438.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = \u041d\u0435\u0442
 report.dependencies.repo.locations.cell.release.enabled            = \u0414\u0430
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = \u041d\u0435\u0442
 report.dependencies.repo.locations.cell.snapshot.enabled           = \u0414\u0430
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = \u041d\u0435\u0442
 report.dependencies.repo.locations.cell.blacklisted.enabled        = \u0414\u0430
 report.dependencies.repo.locations.column.artifact                 = Artifact
 report.dependencies.repo.locations.column.blacklisted              = Blacklisted
