Several language style improvements in resource bundles
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1645365 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -60,7 +60,7 @@ report.dependencies.file.details.column.file                       = Dateiname
 report.dependencies.file.details.column.javaVersion                = Java-Version
 report.dependencies.file.details.column.packages                   = Pakete
 report.dependencies.file.details.column.sealed                     = Versiegelt
-report.dependencies.file.details.column.size                       = Gr\u00f6sse
+report.dependencies.file.details.column.size                       = Gr\u00f6\u00dfe
 report.dependencies.file.details.column.size.gb                    = GB
 report.dependencies.file.details.column.size.mb                    = MB
 report.dependencies.file.details.column.size.kb                    = kB
@@ -157,13 +157,13 @@ report.mailing-lists.nolist                                        = F\u00fcr di
 report.mailing-lists.title                                         = Mailinglisten
 report.scm.accessbehindfirewall.cvs.intro                          = Entwickler, die sich hinter einer Firewall befinden, k\u00f6nnen das viewcvs Web Interface {CVSGrab, http://cvsgrab.sourceforge.net/} verwenden, um den Quellcode auszuchecken.
 report.scm.accessbehindfirewall.general.intro                      = Bitte konsultieren Sie die Dokumentation des verwendeten Versionskontrollsystems f\u00fcr weitere Informationen \u00fcber den Zugriff durch eine Firewall.
-report.scm.accessbehindfirewall.svn.intro                          = Wenn der Zugriff auf das SVN-Archiv von einer Firewall blockiert wird, versuchen Sie zun\u00e4chst, ob der Zugriff \u00fcber die Entwickler-Verbindung funktioniert:
+report.scm.accessbehindfirewall.svn.intro                          = Wenn der Zugriff auf das Subversion-Archiv von einer Firewall blockiert wird, versuchen Sie zun\u00e4chst, ob der Zugriff \u00fcber die Entwickler-Verbindung funktioniert:
 report.scm.accessbehindfirewall.title                              = Zugriff durch eine Firewall
 report.scm.accessthroughtproxy.svn.intro1                          = Subversion kann einen Proxy verwenden, mu\u00df hierf\u00fcr allerdings entsprechend konfiguriert werden. Der zu verwendende Proxy wird in der "servers"-Konfigurationsdatei angegeben. Es h\u00e4ngt von Ihrem System ab, wo sich diese Datei befindet. Bei Linux oder Unix befindet sich die Datei im "~/.subversion"-Verzeichnis. Bei Windows in "%APPDATA%\\Subversion". (Versuchen Sie "echo %APPDATA%" - beachten Sie, da\u00df dies ein versteckter Ordner ist.)
 report.scm.accessthroughtproxy.svn.intro2                          = Diese Datei enth\u00e4lt einige Hinweise. Sollte diese Datei nicht existieren, f\u00fchren Sie einen beliebigen Befehl mit einer aktuellen Subversion-Version aus, um die Datei automatisch erstellen zu lassen.
 report.scm.accessthroughtproxy.svn.intro3                          = Beispiel: "servers"-Datei editieren und Proxy hinzuf\u00fcgen:
 report.scm.accessthroughtproxy.title                               = Zugriff \u00fcber einen Proxy
-report.scm.anonymousaccess.cvs.intro                               = Das CVS-Archiv dieses Projektes kann durch anonymen CVS Zugriff mit dem folgenden Befehl ausgecheckt werden. Wenn Sie nach einem Passwort gefragt werden bet\u00e4tigen Sie einfach die Enter Taste.
+report.scm.anonymousaccess.cvs.intro                               = Das CVS-Archiv dieses Projektes kann durch anonymen CVS-Zugriff mit dem folgenden Befehl ausgecheckt werden. Wenn Sie nach einem Passwort gefragt werden bet\u00e4tigen Sie einfach die Enter Taste.
 report.scm.anonymousaccess.general.intro                           = Konsultieren Sie die Dokumentation des verwendeten Versionskontrollsystems f\u00fcr weitere Informationen \u00fcber anonymen Zugriff. Der Web-Link ist:
 report.scm.anonymousaccess.hg.intro                                = Der Quellcode dieses Projektes kann anonym mit Mercurial \u00fcber folgenden Befehl ausgecheckt werden (Siehe {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.anonymousaccess.svn.intro                               = Der Quellcode dieses Projektes kann anonym mit Subversion \u00fcber folgenden Befehl ausgecheckt werden:
@@ -181,7 +181,7 @@ report.scm.devaccess.svn.intro1.https                              = Jeder kann 
 report.scm.devaccess.svn.intro1.other                              = Entwickler m\u00fcssen das Subversion-Archiv auschecken.
 report.scm.devaccess.svn.intro1.svn                                = Entwickler m\u00fcssen das Subversion-Archiv via SVN auschecken.
 report.scm.devaccess.svn.intro1.svnssh                             = Entwickler m\u00fcssen das Subversion-Archiv via SVN+SSH auschecken.
-report.scm.devaccess.svn.intro2                                    = Verwenden Sie folgenden Befehl um \u00c4nderungen in das Archiv zu \u00fcbertragen (SVN wird Sie nach einem Passwort fragen):
+report.scm.devaccess.svn.intro2                                    = Verwenden Sie folgenden Befehl um \u00c4nderungen in das Archiv zu \u00fcbertragen (Subversion wird Sie nach einem Passwort fragen):
 report.scm.devaccess.title                                         = Gesicherter Zugang f\u00fcr Entwickler
 report.scm.general.intro                                           = Dieses Projekt verwendet ein Versionskontrollsystem um seinen Quellcode zu verwalten.
 report.scm.name                                                    = Versionskontrolle
