--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -172,7 +172,7 @@ report.scm.devaccess.svn.intro1.https                              = Chacun peut
 report.scm.devaccess.svn.intro1.other                              = Seuls les committers doivent acc\u00e9der au d\u00e9p\u00f4t d'archive.
 report.scm.devaccess.svn.intro1.svn                                = Seuls les committers doivent acc\u00e9der au d\u00e9p\u00f4t d'archive via SVN.
 report.scm.devaccess.svn.intro1.svnssh                             = Seuls les committers doivent acc\u00e9der au d\u00e9p\u00f4t d'archive via SVN+SSH.
-report.scm.devaccess.svn.intro2                                    = Pour commiter les changements dans le d\u00e9p\u00f4t, ex\u00e9cuter la ligne de commande suivante (SVN pourra vous demander votre mot de passe)
+report.scm.devaccess.svn.intro2                                    = Pour commiter les changements dans le d\u00e9p\u00f4t, ex\u00e9cuter la ligne de commande suivante (Subversion pourra vous demander votre mot de passe)
 report.scm.devaccess.title                                         = Acc\u00e8s pour les d\u00e9velopeurs
 report.scm.general.intro                                           = Ce projet utilise un d\u00e9p\u00f4t de sources pour g\u00e9rer son code source.
 report.scm.name                                                    = D\u00e9p\u00f4t de sources
