--- a/src/main/resources/project-info-report_pt.properties
+++ b/src/main/resources/project-info-report_pt.properties
@@ -166,7 +166,7 @@ report.scm.devaccess.svn.intro1.https                              = Todos podem
 report.scm.devaccess.svn.intro1.other                              = Os programadores devem fazer o checkout.
 report.scm.devaccess.svn.intro1.svn                                = Os programadores devem fazer o checkout via SVN.
 report.scm.devaccess.svn.intro1.svnssh                             = Os programadores devem fazer o checkout via SVN+SSH.
-report.scm.devaccess.svn.intro2                                    = Para confirmar altera\u00e7\u00f5es no reposit\u00f3rio, execute o seguinte comando (o SVN ir\u00e1 perguntar pela sua password)
+report.scm.devaccess.svn.intro2                                    = Para confirmar altera\u00e7\u00f5es no reposit\u00f3rio, execute o seguinte comando (o Subversion ir\u00e1 perguntar pela sua password)
 report.scm.devaccess.title                                         = Acesso para Programadores
 report.scm.general.intro                                           = Este projecto usa o Source Content Management System para ferir o c\u00f3digo fonte.
 report.scm.name                                                    = Reposit\u00f3rio
