--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -214,7 +214,7 @@ report.scm.devaccess.svn.intro1.https                              = Todos podem
 report.scm.devaccess.svn.intro1.other                              = Os desenvolvedores devem fazer o checkout.
 report.scm.devaccess.svn.intro1.svn                                = Os desenvolvedores devem fazer o checkout via SVN.
 report.scm.devaccess.svn.intro1.svnssh                             = Os desenvolvedores devem fazer o checkout via SVN+SSH.
-report.scm.devaccess.svn.intro2                                    = Para confirmar mudan\u00e7as no reposit\u00f3rio, execute o comando abaixo (o SVN ir\u00e1 perguntar pela sua senha)
+report.scm.devaccess.svn.intro2                                    = Para confirmar mudan\u00e7as no reposit\u00f3rio, execute o comando abaixo (o Subversion ir\u00e1 perguntar pela sua senha)
 report.scm.devaccess.title                                         = Acesso para Desenvolvedores
 report.scm.general.intro                                           = Este projeto utiliza o Source Content Management System para gerenciar o c\u00f3digo fonte.
 report.scm.hg.intro                                                = Este projeto utiliza {Mercurial, http://mercurial.selenic.com/wiki/} para gerenciar seu c\u00f3digo fonte. Instru\u00e7\u00f5es de utiliza\u00e7\u00e3o do Mercurial podem ser encontradas em {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
