--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -69,11 +69,11 @@ report.dependencies.graph.tables.licenses                          = Licences
 report.dependencies.graph.tables.unknown                           = Inconnu
 report.dependencies.graph.title                                    = Graphe des d\u00e9pendances du projet
 report.dependencies.graph.tree.title                               = Arbre des d\u00e9pendances
-report.dependencies.intro.compile                                  = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e compile pour ce projet. Ces d\u00e9pendances sont requises pour compiler et ex\u00e9cuter l'application :
-report.dependencies.intro.provided                                 = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e provided pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application, mais devraient \u00eatre fournies par d\u00e9faut lors de l'utilisation de cette librairie :
-report.dependencies.intro.runtime                                  = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e runtime pour ce projet. Ces d\u00e9pendances sont requises pour ex\u00e9cuter l'application :
-report.dependencies.intro.system                                   = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application :
-report.dependencies.intro.test                                     = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l'application :
+report.dependencies.intro.compile                                  = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e compile pour ce projet. Ces d\u00e9pendances sont requises pour compiler et ex\u00e9cuter l'application\u202f:
+report.dependencies.intro.provided                                 = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e provided pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application, mais devraient \u00eatre fournies par d\u00e9faut lors de l'utilisation de cette biblioth\u00e8que\u202f:
+report.dependencies.intro.runtime                                  = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e runtime pour ce projet. Ces d\u00e9pendances sont requises pour ex\u00e9cuter l'application\u202f:
+report.dependencies.intro.system                                   = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application\u202f:
+report.dependencies.intro.test                                     = Ce qui suit est la liste des d\u00e9pendances de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l'application\u202f:
 report.dependencies.name                                           = D\u00e9pendances
 report.dependencies.nolist                                         = Il n'y a aucune d\u00e9pendance pour ce projet. C'est une application autonome qui ne d\u00e9pend d'aucun autre projet.
 report.dependencies.repo.locations.artifact.breakdown              = Localisation du r\u00e9f\u00e9rentiel pour chacune des d\u00e9pendances.
@@ -92,26 +92,26 @@ report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Localisation du r\u00e9f\u00e9rentiel des d\u00e9pendances
 report.dependencies.title                                          = D\u00e9pendances du projet
 report.dependencies.unnamed                                        = Non-sp\u00e9cifi\u00e9
-report.dependencies.transitive.intro                               = Ce qui suit est la liste des d\u00e9pendances transitives pour ce projet. Les d\u00e9pendances transitives sont les d\u00e9pendances des d\u00e9pendances du projet :
+report.dependencies.transitive.intro                               = Ce qui suit est la liste des d\u00e9pendances transitives pour ce projet. Les d\u00e9pendances transitives sont les d\u00e9pendances des d\u00e9pendances du projet\u202f:
 report.dependencies.transitive.nolist                              = Il n'y a aucune d\u00e9pendance transitive pour ce projet.
 report.dependencies.transitive.title                               = D\u00e9pendances transitives du projet
 report.dependency-convergence.convergence.caption                  = D\u00e9pendances utilis\u00e9es dans les sous-projets
 report.dependency-convergence.description                          = Ce document pr\u00e9sente la convergence des versions des d\u00e9pendances au sein de l'ensemble du projet et de ses sous-modules.
-report.dependency-convergence.legend                               = L\u00e9gende:
+report.dependency-convergence.legend                               = L\u00e9gende\u202f:
 report.dependency-convergence.legend.different                     = Au moins un projet a une d\u00e9pendance de version diff\u00e9rente.
 report.dependency-convergence.legend.shared                        = Tous les projets partagent une d\u00e9pendance de version.
 report.dependency-convergence.name                                 = Convergence des d\u00e9pendances
-report.dependency-convergence.stats.artifacts                      = Nombre d'artefacts uniques (NOA):
-report.dependency-convergence.stats.caption                        = Statistiques:
-report.dependency-convergence.stats.convergence                    = Convergence (NOD/NOA):
-report.dependency-convergence.stats.dependencies                   = Nombre de d\u00e9pendances (NOD):
-report.dependency-convergence.stats.readyrelease                   = Pr\u00eat pour la release (100% de convergence et aucun SNAPSHOT):
+report.dependency-convergence.stats.artifacts                      = Nombre d'artefacts uniques (NOA)\u202f:
+report.dependency-convergence.stats.caption                        = Statistiques\u202f:
+report.dependency-convergence.stats.convergence                    = Convergence (NOD/NOA)\u202f:
+report.dependency-convergence.stats.dependencies                   = Nombre de d\u00e9pendances (NOD)\u202f:
+report.dependency-convergence.stats.readyrelease                   = Pr\u00eat pour la release (100% de convergence et aucun SNAPSHOT)\u202f:
 report.dependency-convergence.stats.readyrelease.error             = Erreur
 report.dependency-convergence.stats.readyrelease.error.convergence = Vous n'avez pas la convergence \u00e0 100%.
 report.dependency-convergence.stats.readyrelease.error.snapshots   = Vous avez des d\u00e9pendances de type SNAPSHOT.
 report.dependency-convergence.stats.readyrelease.success           = Succ\u00e8s
-report.dependency-convergence.stats.snapshots                      = Nombre d'artefacts SNAPSHOT (NOS):
-report.dependency-convergence.stats.modules                        = Nombre de sous-projets:
+report.dependency-convergence.stats.snapshots                      = Nombre d'artefacts SNAPSHOT (NOS)\u202f:
+report.dependency-convergence.stats.modules                        = Nombre de sous-projets\u202f:
 report.dependency-convergence.title                                = R\u00e9action de la convergence des d\u00e9pendances
 report.dependency-info.name                                        = Informations de d\u00e9pendance
 report.dependency-info.title                                       = Informations de d\u00e9pendance
@@ -130,7 +130,7 @@ report.issuetracking.overview.title                                = Vue d'ensem
 report.issuetracking.scarab.intro                                  = Ce projet utilise {Scarab, http://scarab.tigris.org/}.
 report.issuetracking.title                                         = Contr\u00f4le des livraisons
 report.license.description                                         = C'est un lien \u00e0 la licence du projet.
-report.license.multiple                                            = Ce projet est publi\u00e9 sous plusieurs licences:
+report.license.multiple                                            = Ce projet est publi\u00e9 sous plusieurs licences\u202f:
 report.license.name                                                = Licence du projet
 report.license.nolicense                                           = Aucune licence n'est d\u00e9finie pour ce projet.
 report.license.overview.intro                                      = Typiquement les licences \u00e9num\u00e9r\u00e9s pour ce projet sont celles du projet lui-m\u00eame, et non celles des d\u00e9pendances.
@@ -150,22 +150,23 @@ report.mailing-lists.nolist                                        = Il n'y a au
 report.mailing-lists.title                                         = Listes de diffusion du projet
 report.scm.accessbehindfirewall.cvs.intro                          = Pour les d\u00e9velopeurs qui sont coinc\u00e9s derri\u00e8re un firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} peut utiliser l''interface Web pour effectuer un checkout du code source.
 report.scm.accessbehindfirewall.general.intro                      = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s derri\u00e8re un firewall.
-report.scm.accessbehindfirewall.svn.intro                          = Pour les utilisateurs qui sont coinc\u00e9s derri\u00e8re un firewall qui bloque l'acc\u00e8s de HTTP au d\u00e9p\u00f4t de Subversion, vous pouvez essayer d'y acc\u00e9der avec la connection d\u00e9veloppeur :
+report.scm.accessbehindfirewall.svn.intro                          = Pour les utilisateurs qui sont coinc\u00e9s derri\u00e8re un firewall qui bloque l'acc\u00e8s de HTTP au d\u00e9p\u00f4t de Subversion, vous pouvez essayer d'y acc\u00e9der avec la connection d\u00e9veloppeur\u202f:
 report.scm.accessbehindfirewall.title                              = Acc\u00e8s derri\u00e8re un firewall
 report.scm.accessthroughtproxy.svn.intro1                          = Le client de subversion peut acc\u00e9der par proxy, si vous le configurez comme suit. D'abord, \u00e9ditez votre dossier de configuration de "servers" pour indiquer quel proxy utiliser. Ce fichier est situ\u00e9 diff\u00e9remment selon votre syst\u00e8me d'exploitation. Sur Linux ou Unix, il est situ\u00e9 dans le r\u00e9pertoire "~/.subversion". Sur Windows, il se situe dans "%APPDATA%\\Subversion". (essayez de taper "echo %APPDATA%", notons que ce r\u00e9pertoire est cach\u00e9.)
+
 report.scm.accessthroughtproxy.svn.intro2                          = Il y a des commentaires dans le fichier qui expliquent comment faire. Si vous n'avez pas ce fichier, t\u00e9l\u00e9chargez la version la plus r\u00e9cente de Subversion et tapez n'importe quelle commande ; ceci cr\u00e9era les fichiers de configuration.
-report.scm.accessthroughtproxy.svn.intro3                          = Exemple : Editer le fichier 'servers' et ajouter quelque chose du genre :
+report.scm.accessthroughtproxy.svn.intro3                          = Exemple\u202f: Editer le fichier 'servers' et ajouter quelque chose du genre\u202f:
 report.scm.accessthroughtproxy.title                               = Acc\u00e8s avec un proxy
 report.scm.anonymousaccess.cvs.intro                               = Le d\u00e9p\u00f4t d'archive CVS de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes. Lorsqu'un mot de passe pour anonyme est demand\u00e9, appuyez simplement sur la touche Enter.
-report.scm.anonymousaccess.general.intro                           = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s anonyme. L'URL de connection est :
-report.scm.anonymousaccess.svn.intro                               = Le d\u00e9p\u00f4t d'archive Subversion de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes :
+report.scm.anonymousaccess.general.intro                           = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s anonyme. L'URL de connection est\u202f:
+report.scm.anonymousaccess.svn.intro                               = Le d\u00e9p\u00f4t d'archive Subversion de ce projet peut \u00eatre consult\u00e9 de fa\u00e7on anonyme avec les instructions suivantes\u202f:
 report.scm.anonymousaccess.title                                   = Acc\u00e8s de fa\u00e7on anonyme
 report.scm.clearcase.intro                                         = Ce projet utilise {ClearCase, http://www-306.ibm.com/software/awdtools/clearcase/} comme d\u00e9p\u00f4t de sources pour g\u00e9rer son code source.
 report.scm.cvs.intro                                               = Ce projet utilise {Concurrent Versions System, http://www.cvshome.org/} pour g\u00e9rer son code source. Des instructions sur l''utilisation de CVS peuvent \u00eatre trouv\u00e9es sur {http://cvsbook.red-bean.com/, http://cvsbook.red-bean.com/}.
 report.scm.description                                             = C'est un lien au d\u00e9p\u00f4t de sources en ligne qui peut \u00eatre regard\u00e9 par l'interm\u00e9diaire d'un navigateur Web.
 report.scm.devaccess.clearcase.intro                               = Seulement les d\u00e9velopeurs du projet peuvent acc\u00e9der \u00e0 l'arbre de ClearCase par l'interm\u00e9diaire de cette m\u00e9thode. Remplacez username avec la valeur appropri\u00e9e.
 report.scm.devaccess.cvs.intro                                     = Seulement les d\u00e9velopeurs du projet peuvent acc\u00e9der \u00e0 l'arbre de CVS par l'interm\u00e9diaire de cette m\u00e9thode. Remplacez username avec la valeur appropri\u00e9e.
-report.scm.devaccess.general.intro                                 = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s en tant que d\u00e9veloppeur. L'URL de connection est :
+report.scm.devaccess.general.intro                                 = R\u00e9f\u00e9rez-vous \u00e0 la documentation du d\u00e9p\u00f4t d'archive utilis\u00e9 pour plus d'informations sur l'acc\u00e8s en tant que d\u00e9veloppeur. L'URL de connection est\u202f:
 report.scm.devaccess.perforce.intro                                = Seulement les d\u00e9velopeurs du projet peuvent acc\u00e9der \u00e0 l'arbre de Perforce par l'interm\u00e9diaire de cette m\u00e9thode. Remplacez username et password avec la valeur appropri\u00e9e.
 report.scm.devaccess.starteam.intro                                = Seulement les d\u00e9velopeurs du projet peuvent acc\u00e9der \u00e0 l'arbre de Starteam par l'interm\u00e9diaire de cette m\u00e9thode. Remplacez username avec la valeur appropri\u00e9e.
 report.scm.devaccess.svn.intro1.https                              = Chacun peut acc\u00e9der au d\u00e9p\u00f4t d'archive de Subversion via HTTP, mais seuls les committers doivent acc\u00e9der au d\u00e9p\u00f4t d'archive via HTTPS.
@@ -245,11 +246,11 @@ report.dependencyManagement.column.version                         = Version
 report.dependencyManagement.column.classifier                      = Classifier
 report.dependencyManagement.column.type                            = Type
 report.dependencyManagement.column.license                         = Licence
-report.dependencyManagement.intro.compile                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e compile pour ce projet. Ces d\u00e9pendances sont requises pour compiler et ex\u00e9cuter l'application :
-report.dependencyManagement.intro.provided                         = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e provided pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application, mais devraient \u00eatre fournies par d\u00e9faut lors de l'utilisation de cette librairie :
-report.dependencyManagement.intro.runtime                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e runtime pour ce projet. Ces d\u00e9pendances sont requises pour ex\u00e9cuter l'application :
-report.dependencyManagement.intro.system                           = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application :
-report.dependencyManagement.intro.test                             = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l'application :
+report.dependencyManagement.intro.compile                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e compile pour ce projet. Ces d\u00e9pendances sont requises pour compiler et ex\u00e9cuter l'application\u202f:
+report.dependencyManagement.intro.provided                         = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e provided pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application, mais devraient \u00eatre fournies par d\u00e9faut lors de l'utilisation de cette biblioth\u00e8que\u202f:
+report.dependencyManagement.intro.runtime                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e runtime pour ce projet. Ces d\u00e9pendances sont requises pour ex\u00e9cuter l'application\u202f:
+report.dependencyManagement.intro.system                           = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l'application\u202f:
+report.dependencyManagement.intro.test                             = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l'application\u202f:
 report.pluginManagement.name                                       = Gestion des plugins
 report.pluginManagement.description                                = Ce document liste les plugins d\u00e9finis par pluginManagement.
 report.pluginManagement.title                                      = Gestion des plugins du projet
@@ -262,7 +263,7 @@ report.plugins.report.nolist                                       = Il n'y a au
 report.modules.name                                                = Modules du projet
 report.modules.description                                         = Ce document liste les modules (sous-projets) de ce projet.
 report.modules.title                                               = Modules du projet
-report.modules.intro                                               = Ce sont les modules qui ont \u00e9t\u00e9 declar\u00e9 pour ce projet:
+report.modules.intro                                               = Ce sont les modules qui ont \u00e9t\u00e9 declar\u00e9 pour ce projet\u202f:
 report.modules.header.name                                         = Nom
 report.modules.header.description                                  = Description
 report.distributionManagement.name                                 = Gestion de la distribution
