[MPIR-337] Localize sealed information on JARs
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1721853 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_cs.properties
+++ b/src/main/resources/project-info-report_cs.properties
@@ -53,6 +53,8 @@ report.dependencies.column.version                                 = Verze
 report.dependencies.description                                    = Tento dokument obsahuje seznamem z\u00e1vislost\u00ed projektu a poskytuje informaci o ka\u017ed\u00e9 z nich.
 report.dependencies.file.details.cell.debuginformation.yes         = Ano
 report.dependencies.file.details.cell.debuginformation.no          = Ne
+report.dependencies.file.details.cell.sealed.yes                   = Ano
+report.dependencies.file.details.cell.sealed.no                    = Ne
 report.dependencies.file.details.column.classes                    = T\u0159\u00eddy
 report.dependencies.file.details.column.entries                    = Z\u00e1znamy
 report.dependencies.file.details.column.file                       = N\u00e1zev souboru
