--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -53,6 +53,8 @@ report.dependencies.column.version                                 = Version
 report.dependencies.description                                    = Informationen \u00fcber die Abh\u00e4ngigkeiten dieses Projektes.
 report.dependencies.file.details.cell.debuginformation.yes         = Ja
 report.dependencies.file.details.cell.debuginformation.no          = Nein
+report.dependencies.file.details.cell.sealed.yes                   = Ja
+report.dependencies.file.details.cell.sealed.no                    = Nein
 report.dependencies.file.details.column.classes                    = Klassen
 report.dependencies.file.details.column.debuginformation           = Debug-Informationen
 report.dependencies.file.details.column.entries                    = Eintr\u00e4ge
