--- a/src/main/resources/project-info-report_pt.properties
+++ b/src/main/resources/project-info-report_pt.properties
@@ -52,6 +52,8 @@ report.dependencies.column.version                                 = Vers\u00e3o
 report.dependencies.description                                    = Este documento enumera as depend\u00eancias do projecto e fornece informa\u00e7\u00f5es de cada uma.
 report.dependencies.file.details.cell.debuginformation.yes         = Sim
 report.dependencies.file.details.cell.debuginformation.no          = N\u00e3o
+report.dependencies.file.details.cell.sealed.yes                   = Sim
+report.dependencies.file.details.cell.sealed.no                    = N\u00e3o
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.entries                    = Entradas
 report.dependencies.file.details.column.file                       = Nome do ficheiro
