--- a/src/main/resources/project-info-report_es.properties
+++ b/src/main/resources/project-info-report_es.properties
@@ -53,6 +53,8 @@ report.dependencies.column.version                                 = Versi\u00f3
 report.dependencies.description                                    = Este documento presenta las dependencias del proyecto y proporciona informaci\u00f3n sobre cada dependencia.
 report.dependencies.file.details.cell.debuginformation.yes         = S\u00ed
 report.dependencies.file.details.cell.debuginformation.no          = No
+report.dependencies.file.details.cell.sealed.yes                   = S\u00ed
+report.dependencies.file.details.cell.sealed.no                    = No
 report.dependencies.file.details.column.classes                    = Clases
 report.dependencies.file.details.column.entries                    = Entries
 report.dependencies.file.details.column.file                       = Fichero
