--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -53,6 +53,8 @@ report.dependencies.column.version                                 = Version
 report.dependencies.description                                    = Ce document liste les d\u00e9pendances du projet et fournit des informations sur chaque d\u00e9pendance.
 report.dependencies.file.details.cell.debuginformation.yes         = Oui
 report.dependencies.file.details.cell.debuginformation.no          = Non
+report.dependencies.file.details.cell.sealed.yes                   = Oui
+report.dependencies.file.details.cell.sealed.no                    = Non
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.entries                    = Entr\u00e9es
 report.dependencies.file.details.column.file                       = Nom du fichier
