[MPIR-338] Localize alternative text for used icons
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1727771 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -69,6 +69,8 @@ report.dependencies.file.details.column.size.kb                    = kB
 report.dependencies.file.details.columntitle.debuginformation      = Gibt an, ob diese Abhängigkeiten mit Debug-Informationen kompiliert wurden.
 report.dependencies.file.details.title                             = Details zu den Abh\u00e4ngigkeiten
 report.dependencies.file.details.total                             = Gesamt
+report.dependencies.graph.icon.close                               = [schlie\u00dfen]
+report.dependencies.graph.icon.information                         = [Information]
 report.dependencies.graph.tables.licenses                          = Lizenzen
 report.dependencies.graph.tables.unknown                           = Unbekannt
 report.dependencies.graph.title                                    = Abh\u00e4ngigkeitsgraph
@@ -102,6 +104,8 @@ report.dependencies.transitive.title                               = Transitive 
 report.dependency-convergence.convergence.caption                  = In Modulen verwendete Abh\u00e4ngigkeiten
 report.dependency-convergence.convergence.single.caption           = In diesem Projekt verwendete Abh\u00e4ngigkeiten
 report.dependency-convergence.description                          = Dieses Dokument informiert \u00fcber die Konvergenz der Versionen von Abh\u00e4ngigkeiten des gesamten Projektes inklusive seiner Module.
+report.dependency-convergence.icon.error                           = [Fehler]
+report.dependency-convergence.icon.success                         = [Erfolg]
 report.dependency-convergence.legend                               = Legende:
 report.dependency-convergence.legend.different                     = Mindestens eine Abh\u00e4ngigkeit verwendet eine andere Version der Abh\u00e4ngigkeit oder hat SNAPSHOT-Abh\u00e4ngigkeiten.
 report.dependency-convergence.legend.shared                        = Alle Module/Abh\u00e4ngigkeiten verwenden dieselbe Version der Abh\u00e4ngigkeit.
